# huntready

./: .claudeignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  README.md
ingestion/: pyproject.toml
ingestion/ingestion/: __init__.py
ingestion/ingestion/lib/: __init__.py  arcgis.py  db.py  drift_guard.py  overlays.py  pdf.py  pdf_fetch.py  schema.py
ingestion/states/colorado/: README.md  __init__.py  build_overlay_fixture.py  cwd-source-discovery.md  fetch_pdfs.py  (+14 more)
ingestion/tests/: conftest.py  test_arcgis.py  test_build_co_overlay_fixture.py  test_build_overlay_fixture.py  test_co_binding_reference.py  test_cwd_discriminator.py  test_db.py  test_drift_guard.py  test_extract_black_bear.py  test_extract_co_big_game.py  test_extract_co_black_bear.py  test_extract_co_draw_mechanics.py  test_extract_dea.py  test_extract_legal_descriptions.py  test_fetch_co_pdfs.py  test_fetch_pdfs.py  test_load_co_draw_specs.py  test_load_co_jurisdiction_bindings.py  test_load_co_regulation_records.py  test_load_co_reporting_obligations.py  test_load_co_restricted_area_verbatim.py  test_load_co_restricted_areas.py  test_load_co_seasons_and_licenses.py  test_load_co_state_boundary.py  test_load_cwd_zones.py  test_load_draw_specs.py  test_load_gmus.py  test_load_hds.py  test_load_jurisdiction_bindings.py  test_load_portions.py  test_load_regulation_records.py  test_load_reporting_obligations.py  test_load_restricted_areas.py  test_load_seasons_and_licenses.py  test_load_state_boundary.py  test_pdf.py  test_pdf_fetch.py
(+328 files in other folders)
