[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huntready-ingestion"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "pypdf>=4.0",
    "geopandas>=1.0",
    "shapely>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "pyproj>=3.6",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.11",
    "types-shapely>=2.0",
    "types-requests>=2.32",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]
